# Qt-Designer

./: .gitignore  CMakeLists.txt  form.cpp  form.h  form.ui  lights.cpp  lights.h  main.cpp  patternMaker.cpp  patternMaker.h  watch.cpp  watch.h  watchUi.cpp  watchUi.h
